--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,14 @@
   background-color: theme("colors.secondary") !important;
 }
 
+.skipFirst > div:nth-child(n + 3) {
+  margin-top: 100px;
+}
+
+.page {
+  padding-top: 75px;
+}
+
 /* @media (prefers-color-scheme: dark) {
   .swiper-pagination-bullet {
     background-color: theme("colors.white") !important;
