--- a/app/globals.css
+++ b/app/globals.css
@@ -42,7 +42,9 @@
 .swiper-slide-content {
   opacity: 0;
   transform: translateY(50px);
-  transition: opacity 0.5s, transform 0.5s;
+  transition:
+    opacity 0.5s,
+    transform 0.5s;
 }
 
 .swiper-slide-active .swiper-slide-content {
@@ -76,7 +78,8 @@
 }
 
 .custom-shadow:hover {
-  box-shadow: 0px 0px 20px rgba(157, 71, 255, 0.5),
+  box-shadow:
+    0px 0px 20px rgba(157, 71, 255, 0.5),
     0px 5px 5px -1px rgba(163, 58, 233, 0.25),
     inset 4px 4px 8px rgba(219, 175, 255, 0.5),
     inset -4px -4px 8px rgba(137, 19, 216, 0.35);
@@ -95,4 +98,8 @@
 
 .card:hover .stroke {
   stroke-dashoffset: 100;
+}
+
+.grecaptcha-badge {
+  z-index: 1;
 }
